Agregado fondo y color al titulo

--- a/ejemplo/templates/ejemplo/saludar.html
+++ b/ejemplo/templates/ejemplo/saludar.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Proyecto Python</title>
 </head>
-<body>
-    Este es mi proyecto Final en Python
+<body style="background-color: black; text-align: center;">
+    <h1 style="color: red;">Este es mi proyecto Final en Python</h1>
+    
+
 </body>
 </html>
